METRON-612 Clean up Error Prone generated warnings (justinleet) closes apache/incubator-metron#389